# dual_numbers

./: LICENSE  README.md  TODO.md  pyproject.toml
examples/: qttest.py
src/: __init__.py  dual_numbers.py
src/dual_numbers/: __init__.py
